=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================

Version 4.3.0
 - Fixed: [ 3417402 ] Function createTempUser() not working (canajun2eh)
 - Added: List all web page links in media object list near top of Personal Details page (George Pauly and canajun2eh)
 - Added: Use media object title to caption image on Personal Details page (canajun2eh)
 - Added: Configurable links to Google Analytics, Piwik Analytics, ClustrMaps Analytics (canajun2eh)
 - Updated: dhtmlXTabbar to version 3.0 build 110707 (canajun2eh)
 - Fixed: Authentication between PGV sites with linked GEDCOMs not working properly (Pasquale Ceres)
 - Fixed: [ 3317813 ] Cannot remove entries from Banned IP list (canajun2eh)
 - Fixed: [ 3316545 ] PclZip fails when php_uname() is disabled by hosting company (canajun2eh)
 - Added: [ 3279989 ] Support for Vietnam clickable maps while editing places (cdeces)
 - Fixed: [ 3208343 ] Content of additional Advanced HTML blocks may be lost (ggpauly)
 - Fixed: [ 3202881 ] Not able to accept changes (canajun2eh)
 - Fixed: [ 3197154 ] PDO/Postgresql: error in branches list (canajun2eh)
 - Deleted: wordsearch module (canajun2eh)
 - Fixed: [ 3187504 ] Fatal error in Research Assistant (canajun2eh)
 - Changed: Relocate "Prev" and "Next" buttons in Install wizard (canajun2eh)
 - Fixed: [ 3179194 ] Upload GEDCOM fails (canajun2eh)
 - Fixed: [ 3173600 ] Manage Media forgets certain options after media change made (canajun2eh)
 - Fixed: [ 3177042 ] Manage Media, Add link errors when entering ID directly (canajun2eh)
 - Fixed: [ 3174421 ] Error functions_DB.php in fetch_gedcom_record (pathan)
 - Fixed: [ 3171242 ] pedigree_image_xxx styles (canajun2eh)

Version 4.2.4
 - Fixed: [ 3121290 ] Reports: Source list damaged (canajun2eh)